--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,9 +24,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "dayjs": "^1.11.7",
     "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
+    "primeicons": "^6.0.1",
+    "primeng": "^15.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
