Bring main up to date with gh-pages

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ id_rsa_priv.pem
 *.user
 *.userosscache
 *.sln.docstates
+.angular
+
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
